Fix(preferences): Fonts appear blurry in preferences-dialog

--- a/plugin/global/styles/preferences.css
+++ b/plugin/global/styles/preferences.css
@@ -2,9 +2,12 @@
 .plugin-preferences-dialog {
     display: flex;
     position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: fit-content;
     height: calc(100vh - 150px);
     border-radius: 8px;
     box-shadow: 2px 2px 4px #dbdbdb, -2px -2px 4px #dbdbdb;
@@ -13,6 +16,13 @@
     font-size: 14px;
     font-family: "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: rgb(65, 84, 98);
+    background: #f9f9f9;
+}
+
+.plugin-preferences-dialog.is-dragged {
+    bottom: auto;
+    right: auto;
+    margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -57,7 +67,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    background: #eee;
+    border-right: 1px solid #e5e7eb;
 }
 
 .plugin-preferences-search {
@@ -118,7 +128,7 @@
 
 .plugin-preferences-menu-item.active {
     color: #FFF;
-    background: #0A84FF;
+    background: #4285f4;
     pointer-events: none;
 }
 
@@ -128,7 +138,6 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    background: #F5F5F5;
 }
 
 .plugin-preferences-title {
@@ -151,7 +160,7 @@
     position: absolute;
     right: 0;
     margin: 15px 18px 0 0;
-    background: #eaeaea;
+    background: #eee;
     height: 22px;
     width: 22px;
     line-height: 22px;
